# ktest

./: .clangd  CMakeLists.txt  README.md  default.nix  dev_shell.sh  flake.nix  format.sh  justfile
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.c
dev/vscode/: launch.json
include/: ktest.h  ktest.inc
src/: CMakeLists.txt  cstart.c  ktest.c  strbuf.c  strbuf.h
test/: CMakeLists.txt  cstarttest.c  ktesttest.c  t_assert.c  t_assert_eq.c  t_assert_str_eq.c  t_smoke.c
